# Sulix-Intelligence

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FULL_REVIEW_REPORT.md  LICENSE  README.md  README.zh-CN.md  config.ci.toml  config.example.toml  package.json  rustfmt.toml  wrangler.jsonc  xx00  xx01
.github/workflows/: cron_brief.yml  deploy.yml
DailyBrief/: assessment_registry.json  decision_registry.json  design.css  investigation_registry.json  manifest.json  memory_db.json  pipeline_report.json
DailyBrief/digest/: 2026-06-26.mdx  2026-07-08.md
DailyBrief/evidence/: 2026-06-25.jsonl  2026-06-26.jsonl  2026-07-08.jsonl
DailyBrief/premium/: 今日要闻.html  企业ai应用.html
archive/: findings.json
archive/content-posts-legacy/: 2026-06-23-llm推理优化.md  2026-06-23-sec-8-k报告.md  2026-06-23-sec-8-k文件.md  2026-06-23-test.md  2026-06-23-人事变动.md  2026-06-23-今日要闻.md  2026-06-23-其他事件.md  2026-06-23-推理模型可信度.md  2026-06-23-监管披露.md  2026-06-23-股东投票.md  2026-06-23-重大协议.md  2026-06-23-高管变动.md  2026-06-24-ai-agent应用.md  2026-06-24-ai模型进展.md  2026-06-24-高性能计算.md
astro-frontend/: astro.config.mjs  package-lock.json  package.json
astro-frontend/public/: design.css
astro-frontend/src/: content.config.ts
crates/ai-pipeline/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: briefing.rs  lib.rs  rebuild.rs  semantic.rs  strategies.rs
crates/embedding/: Cargo.toml
crates/fetcher/: Cargo.toml
crates/rules/: Cargo.toml
crates/search/: Cargo.toml
crates/store/: Cargo.toml
crates/sulix-cli/: Cargo.toml
crates/sulix-cli/src/: db.rs  entity.rs  lib.rs  main.rs
crates/sulix-cli/src/agent/: mod.rs  signal.rs
crates/sulix-config/: Cargo.toml
crates/sulix-contract/: Cargo.toml
crates/sulix-contract/src/: belief.rs  decision.rs  event.rs  lib.rs  observation.rs  reflection.rs  signal.rs  theme.rs  thesis.rs
crates/sulix-intelligence/: Cargo.toml
crates/sulix-intelligence/src/: artifact.rs  context.rs  decision_history.rs  decision_mapping.rs  lib.rs  loader.rs  output.rs  pipeline.rs  signal_classification.rs  step.rs  thesis_generation.rs
crates/sulix-intelligence/src/postprocessing/: calibration.rs  editor_note.rs  mod.rs  summary.rs
crates/sulix-intelligence/tests/: pipeline_golden_test.rs
crates/sulix-intelligence/tests/fixtures/: expected_signal.json  matching_cases.json  observation.json
crates/sulix-llm/: Cargo.toml
crates/sulix-llm/src/: api.rs  audit.rs  client.rs  dispatch.rs  lib.rs  parser.rs  retry.rs  types.rs
crates/sulix-observation/: Cargo.toml
crates/sulix-observation/src/: client.rs  conversion.rs  fetcher.rs  lib.rs
crates/sulix-observation/src/source/: mod.rs  reddit.rs  rss.rs  uspto.rs
crates/sulix-store/: Cargo.toml
crates/vectorize/: Cargo.toml
crates/worker-entry/: Cargo.toml  deploy.cmd  wrangler.toml
crates/worker-entry/src/: lib.rs  lib.rs.temp  metrics.rs  vectorize.rs
docs/: architecture.md
docs/archive/: FULL_REVIEW_REPORT.md
docs/decisions/: 001-store-trait.md  002-vector-search.md
migrations/: 0001_init.sql  0002_seed_rules.sql  0002_signal_strategies.sql  0003_add_extraction_level.sql  0005_intelligence_briefs.sql  0005_missing_indexes.sql
output/: memory_db.json  pipeline_report.json
output/daily/: 2026-06-25-ai-agent-market-2025.mdx  2026-06-25-sulix-intel-architecture.mdx  2026-06-26-.md  2026-06-26-agent.md  2026-06-26-agent.mdx  2026-06-26-ai-agent.md  2026-06-26-ai-agent.mdx  2026-06-26-ai-agents.md  2026-06-26-ai.md  2026-06-26-ai.mdx  2026-06-26-aiagent.md  2026-06-26-untitled.md  2026-06-26-untitled.mdx
output/digest/: 2026-06-26.md  2026-06-26.mdx
output/evidence/: 2026-06-26.jsonl
output/investigation/: 17824416.md  17824430.md  17824749.md  agent.md  ai.md
output/premium/: agent与工作.html  agent应用.html  agent能力.html  ai-agent.html  ai-agents与应用.html  ai-agent能力.html  ai代理.html  ai代理与模型.html  ai代理应用.html  ai创新.html  ai安全与责任.html  ai应用与agent.html  ai应用与能力.html  ai智能体.html  ai治理.html  ai监管.html  ai硬件创新.html  ai芯片.html  ai芯片与硬件.html  ai芯片硬件.html  硬件创新.html  芯片技术.html
output/reflection/: reflection-reflection-1782443065.mdx  reflection-reflection-1782443632.mdx  reflection-reflection-1782449006.md  reflection-reflection-1782458041.md  reflection-reflection-1782458908.md  reflection-reflection-1782462967.md
output/research/: 2026-06-26-agent.md  2026-06-26-agent.mdx  2026-06-26-ai-agent.md  2026-06-26-ai-agent.mdx  2026-06-26-ai-agents.md  2026-06-26-ai.md  2026-06-26-ai.mdx  2026-06-26-aiagent.md  2026-06-26-untitled.md  2026-06-26-untitled.mdx
output/thesis/: 2026-06-25-personal-intelligence-engine.mdx  2026-06-26-82441697.md  2026-06-26-82443023.md  2026-06-26-82474901.md  2026-06-26-agent.md  2026-06-26-agent.mdx  2026-06-26-ai.md  2026-06-26-ai.mdx  2026-06-26-untitled.md  2026-06-26-untitled.mdx
src/: app_context.rs  archive.rs  belief_engine.rs  catalog.rs  change_detection.rs  client.rs  clusterer.rs  config.rs  db.rs  decision_engine.rs  design.rs  enricher.rs  entity.rs  event_log.rs  fetcher.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  pipeline.rs  premium.rs  publishing.rs  question_engine.rs  renderer.rs  storage.rs  template.rs  termination.rs  twitter.rs  versioned.rs
src/agent/: calibration.rs  decay.rs  editor.rs  mod.rs  orchestrator.rs  research.rs  scan.rs  signal.rs  synthesis.rs  verification.rs
src/artifact/: builder.rs  manifest.rs  mod.rs  report.rs
src/clusterer/: analysis.rs  clustering.rs  llm_prededup.rs  mod.rs  synthesis.rs
src/delivery/: mod.rs  publisher.rs
src/domain/: action.rs  artifact.rs  decision.rs  editor_note.rs  evidence.rs  investigation.rs  localized.rs  mod.rs  observation.rs  outcome.rs  premium.rs  question_match.rs  reflection.rs  revision.rs  strategic_domain.rs  theme.rs  thesis.rs
src/engine/: belief.rs  decision.rs  decision_registry.rs  investigation.rs  investigation_registry.rs  memory.rs  mod.rs  pipeline_health.rs  premium.rs  registry.rs  stability.rs
src/hermes/: conflicts.rs  detector.rs  mod.rs  trends.rs
src/publishing/: emit.rs  generate.rs  helpers.rs  infer.rs  layer2.rs  (+3 more)
(+73 files in other folders)
