[workspace]
resolver = "2"
members = [
    "crates/fetcher",
    "crates/store",
    "crates/rules",
    "crates/ai-pipeline",
    "crates/search",
    "crates/embedding",
    "crates/api",
    "crates/worker-entry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependency versions across the workspace. Individual crates pull
# what they need via `workspace = true` so bumping a version happens once.
[workspace.dependencies]
worker = { version = "0.8", features = ["http", "d1", "queue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
feed-rs = "2"
thiserror = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["js"] }
scraper = "0.22"
js-sys = "0.3"
url = "2"
console_error_panic_hook = "0.1"

fetcher = { path = "crates/fetcher" }
store = { path = "crates/store" }
rules = { path = "crates/rules" }
ai-pipeline = { path = "crates/ai-pipeline" }
embedding = { path = "crates/embedding" }
search = { path = "crates/search" }
api = { path = "crates/api" }

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1

