[package]
name = "sulix-cli"
version = "0.1.0"
edition = "2021"
default-run = "sulix-cli"
description = "Sulix Intelligence — 命令行入口"

[[bin]]
name = "sulix-cli"
path = "src/main.rs"

[[bin]]
name = "intel-pipeline"
path = "src/bin/intel_pipeline.rs"

[dependencies]
sulix-contract = { path = "../sulix-contract" }
sulix-config = { path = "../sulix-config" }
sulix-llm = { path = "../sulix-llm" }
sulix-intelligence = { path = "../sulix-intelligence" }
sulix-observation = { path = "../sulix-observation" }
sulix-store = { path = "../sulix-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
