[package]
name = "sulix-contract"
version = "0.1.0"
edition = "2021"
description = "Sulix Intelligence — 层间契约类型 (Layer Boundary Contracts)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
