[package]
name = "sulix-intelligence"
version = "0.1.0"
edition = "2021"
description = "Sulix Intelligence — 认知管线"

[dependencies]
sulix-contract = { path = "../sulix-contract" }
sulix-llm = { path = "../sulix-llm" }
sulix-config = { path = "../sulix-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"

[dev-dependencies]
toml = "0.8"
