[package]
name = "sulix-llm"
version = "0.1.0"
edition = "2021"
description = "Sulix Intelligence — LLM Provider 抽象"

[dependencies]
sulix-config = { path = "../sulix-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
