[package]
name = "sulix-observation"
version = "0.1.0"
edition = "2021"
description = "Sulix Intelligence — 信号源抓取层"

[dependencies]
sulix-config = { path = "../sulix-config" }
sulix-contract = { path = "../sulix-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
feed-rs = { version = "2.2", features = ["sanitize"] }
scraper = "0.27"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
