[package]
name = "worker-entry"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
api.workspace = true
store.workspace = true
fetcher.workspace = true
rules.workspace = true
ai-pipeline.workspace = true
serde.workspace = true
serde_json.workspace = true
js-sys.workspace = true
feed-rs.workspace = true
console_error_panic_hook.workspace = true
async-trait.workspace = true
embedding.workspace = true


[package.metadata.release]
release = false


